<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="#00FFFFFF"
        android:text="@string/Login_title"
        android:textColor="#EEEEEE"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/inputFullName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/inputFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:width="300dp"
        android:autofillHints="Full Name"
        android:background="@drawable/edittext_style"
        android:hint="@string/Full_name"
        android:textColor="#eee"
        android:inputType="text"
        android:padding="15dp"
        android:textColorHint="#eee"
        app:layout_constraintBottom_toTopOf="@+id/inputPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:width="300dp"
        android:autofillHints="Password"
        android:background="@drawable/edittext_style"
        android:hint="@string/Password"
        android:textColor="#eee"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColorHint="#eee"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="@+id/inputFullName" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="270dp"
        android:background="@drawable/button"
        android:padding="10dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>