<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212"
    tools:context=".ShopActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/header_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="39dp"
            android:layout_weight="1"
            android:fontFamily="@font/bangers_r"
            android:text="@string/black_defence"
            android:textColor="#EEEEEEEE"
            android:textSize="26sp" />

        <Button
            android:id="@+id/cart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="39dp"
            android:layout_weight="1"
            android:backgroundTint="#6200EE"
            android:fontFamily="@font/bangers_r"
            android:text="@string/cart"
            android:textAlignment="center"
            android:textColor="#EEEEEEEE"
            android:textSize="26sp" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/viewOrders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">
        <Button
            android:id="@+id/v"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/view_orders" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/products"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewOrders">

        <SearchView
            android:id="@+id/searchInput"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:background="#eee" />

        <Spinner
            android:id="@+id/searchSpinner"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="#eee" />

        <Button
            android:id="@+id/searchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <ListView
        android:id="@+id/products"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat">

    </ListView>


</androidx.constraintlayout.widget.ConstraintLayout>